--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ const sectionTitleColor = '#71F9CE';
   </head>
   <body
     class="mx-auto max-w-screen-lg px-5 font-main primaryColor bg-gray-950 bg-[radial-gradient(ellipse_90%_80%_at_50%_-20%,rgba(120,119,198,0.2),rgba(255,255,255,0))] xs:text-[16px] md:text-[18px]"
+    id="home"
   >
     <NavBar />
     <slot />
