[update] several portfolio sections

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,8 +1,8 @@
----
+<!-- ---
 import Image from 'astro/components/Image.astro';
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
 import { externalLinks } from '../data/external';
-import ContactIcon from '../../public/icons/email.webp';
+import ContactIcon from '../../public/icons/contact.svg';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -12,7 +12,7 @@ const { rrss, email } = externalLinks;
 
 <section class="pt-10 mb-10 flex flex-col gap-12" id="contact">
   <div class="flex items-center gap-4">
-    <Image src={ContactIcon} alt={t('contact.title')} class="w-8 h-8" />
+    <Image src={ContactIcon} alt={t('contact.title')} class="w-[1.6rem]" />
     <h2
       class="font-semibold text-xl sectionTitleColor text-center lg:text-start"
     >
@@ -61,4 +61,4 @@ const { rrss, email } = externalLinks;
       }
     </article>
   </section>
-</section>
+</section> -->
