--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -34,33 +34,43 @@ const { cv, rrss } = externalLinks;
         {
           rrss.map((rrss) => {
             return (
-              <a href={rrss.link} target="_blank" aria-label={rrss.name}>
-                <Image
-                  src={rrss.icon}
-                  alt={rrss.name}
-                  width={42}
-                  height={42}
-                  loading="eager"
-                  class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110"
-                />
-              </a>
+              <div class="flex items-center gap-2 md:transition md:duration-300 md:ease-in-out md:hover:scale-105 cursor-pointer">
+                <a href={rrss.link} target="_blank" aria-label={rrss.name}>
+                  <Image
+                    src={rrss.icon}
+                    alt={rrss.name}
+                    width={42}
+                    height={42}
+                    loading="eager"
+                    class=""
+                  />
+                </a>
+                {/* <p class="text-[0.95rem]">{rrss.name}</p> */}
+              </div>
             );
           })
         }
-        <a
-          href={lang === 'en' ? '/FedeParrillaENG.pdf' : '/FedeParrillaESP.pdf'}
-          target="_blank"
-          aria-label={cv.name}
+        <!-- <div
+          class="flex items-center gap-2 bg-[#71F9CE] text-gray-950 px-4 rounded-xl md:transition md:duration-300 md:ease-in-out md:hover:scale-105 cursor-pointer"
         >
-          <Image
-            src={cv.icon}
-            alt={cv.name}
-            width={42}
-            height={42}
-            loading="eager"
-            class="md:transition md:duration-300 md:ease-in-out md:hover:scale-110"
-          />
-        </a>
+          <a
+            href={lang === 'en'
+              ? '/FedeParrillaENG.pdf'
+              : '/FedeParrillaESP.pdf'}
+            target="_blank"
+            aria-label={cv.name}
+          >
+            <Image
+              src={cv.icon}
+              alt={cv.name}
+              width={28}
+              height={28}
+              loading="eager"
+              class=""
+            />
+          </a>
+          <p class="text-[1.010rem]">{cv.name}</p>
+        </div> -->
       </div>
     </div>
     <Image
