[fix] contact link

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -24,10 +24,10 @@ const menuItems = [
     name: t('nav.skills'),
     link: '#skills',
   },
-  {
-    name: t('nav.contact'),
-    link: '#contact',
-  },
+  // {
+  //   name: t('nav.contact'),
+  //   link: '#contact',
+  // },
 ];
 
 const flags = [
